# day-ahead-power-forecast

./: .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  env.sample  pyproject.toml  requirements.txt
day_ahead_power_forecast/: params.py  utils.py
day_ahead_power_forecast/api/: fast.py
day_ahead_power_forecast/frontend/: app.py
day_ahead_power_forecast/interface/: main.py  workflow.py
day_ahead_power_forecast/ml_ops/: cross_val.py  data.py  encoders.py  model.py  preprocessor.py  registry.py  sequence.py
notebooks/: a-neural-network-trick-for-ranking-problems.ipynb  advanced_power_forecast_pytorch.ipynb
