[tool.poetry]
name = "day-ahead-power-forecast"
version = "0.1.0"
description = ""
authors = ["jerome roeser <jerome.roeser@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
]
ignore = ["F841", "E501"]  # assigned but never used
